--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -879,12 +879,12 @@ EVTDESC8013;Being a constitutional monarch, our Emperor Dom Pedro II has quite a
 EVTNAME8013;Dom Pedro's Travels;;;;;;;;;;;;;x
 EVTOPTA8013;A truly worldly man.;;;;;;;;;;;;;x
 EVTNAME8016;Republican Revolution?;;;;;;;;;;;;;
-EVTDESC8016;The end of slavery had resulted in an explicit shift of support to republicanism by rich and powerful coffee farmers who held great political, economic and social power in the country. To avert a republican backlash, the government adopted a series of credit and military policies and reforms to appease the land owners. The measures made by the government alarmed the civilian republicans and the Positivists in the military corps. They saw that it would undercut support for their own aims, and were emboldened to further action. For them, it had become a case of ‘now or never’. Although there was no desire in Brazil among the majority of the population to change the form of government, the civilian republicans began pressuring the Positivist officers to overthrow the monarchy. The Positivists launched a coup d’état and tried to institute a republic on November 15, 1889. During the whole ordeal Pedro II showed no emotion, as if unconcerned about the outcome. He only commented:;;;;;;;;;;;;;x
-EVTOPTA8016;If this is how it is, I will retire. I worked too much and I’m tired. Now I’ll rest.;;;;;;;;;;;;;x
+EVTDESC8016;The end of slavery had resulted in an explicit shift of support to republicanism by rich and powerful coffee farmers who held great political, economic and social power in the country, and now, a  coup has been orchestrated by some specific militar elites. \n\n The country is indeed in a moment of low stability, there’s no denying, but this “”coup”” attempt could be easily pushed back, the big farmers won’t be happy, but we have a good chunk of the army and, most important of all, the people on our side.;;;;;;;;;;;;;x
+EVTOPTA8016;"If this is how it is, I will retire. I worked too much and I’m tired. Now I’ll rest.";;;;;;;;;;;;;x
 EVTOPTB8016;Crush the rebellion!;;;;;;;;;;;;;x
 EVTNAME8017;A new republic is born!;;;;;;;;;;;;;
-EVTDESC8017;It's finally time for Brazil leave behind the ways of the Old World and embrace the new order. A republic, a true democracy ;;;;;;;;;;;;;
-EVTOPTA8017;  ;;;;;;;;;;;;;
+EVTDESC8017;The Emperor abdicated after seeing the flames of revolution being set ablaze. It's finally time for Brazil to leave behind the ways of the Old World and embrace the new order. \n\n A republic, a true democracy.;;;;;;;;;;;;;
+EVTOPTA8017;A time age begins.;;;;;;;;;;;;;
 EVTNAME8018;The Imperial Family;;;;;;;;;;;;;
 EVTDESC8018;After the recent revolution, we were pondering what to do with the royal family. While they where ultimately forced out for a reason, the regime ended in a somewhat peaceful way, and the common folk is mostly unaware of what's going, the royal family is still somewhat well liked, and once the word spread around they may be able to instigate the people against the new regime. \n\nWe could straight up exile them, but we could also let them be.;;;;;;;;;;;;;
 EVTOPTA8018;Exile them!;;;;;;;;;;;;;
