--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1272,7 +1272,7 @@ EVTOPTA97526;They want war? We’ll give them war.;;;;;;;;;;;;;x
 EVTDESC97530;As the Springtime of Nations sweeps across Europe, Romanian liberals and nationalists in $COUNTRY$, led by a group of young intellectuals and officers in the $COUNTRY_ADJ$ Militia, the movement has succeeded in toppling the ruling Prince Gheorghe Bibescu, who has fled the principality;;;;;;;;;;;;;x
 EVTNAME97530;The Wallachian Revolution of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA97530;The Romanian people will be free!;;;;;;;;;;;;;x
-EVTDESC97531;Romanian liberals and nationalists in $FROMCOUNTRY$, led by a group of young intellectuals and officers in the $FROMCOUNTRY_ADJ$ Militia, the movement has succeeded in toppling the ruling Prince Gheorghe Bibescu, and have established a provisional government in $COUNTRY$.;;;;;;;;;;;;;x
+EVTDESC97531;Romanian liberals and nationalists in $FROMCOUNTRY$, led by a group of young intellectuals and officers in the $FROMCOUNTRY_ADJ$ Militia, succeeded in toppling the ruling Prince Gheorghe Bibescu, and have established a provisional government in $COUNTRY$.;;;;;;;;;;;;;x
 EVTNAME97531;The Wallachian Problem;;;;;;;;;;;;;x
 EVTOPTA97531;$COUNTRY_ADJ$ suzerainty must be re-established!;;;;;;;;;;;;;x
 EVTOPTB97531;Let them go.;;;;;;;;;;;;;x
