--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -5,7 +5,7 @@ override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Cam
 dom_pedro_age_10;Pedro is currently 10, it would be a terrible idea to crown him.§b;;;;;;;;;;;;x
 dom_pedro_age_11;Pedro is currently 11, it is too early to crown him.§b.§b;;;;;;;;;;;;x
 dom_pedro_age_12;Pedro is currently 12, it may be too early to crown him.§b.§b;;;;;;;;;;;;x
-dom_pedro_age_13;Pedro is currently 13, still early to crown him, but it may be resonable.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_13;Pedro is currently 13, still early to crown him, but it may be reasonable.§b.§b;;;;;;;;;;;;x
 dom_pedro_age_14;Pedro is currently 14, changing his age of majority and crowning would be an wise move, he's old enough.§b;;;;;;;;;;;;x
 dom_pedro_age_15;Pedro is currently 15, changing his age of majority and crowning would be an wise move, he's old enough.§b.§b;;;;;;;;;;;;x
 dom_pedro_age_16;Pedro is currently 16, changing his age of majority and crowning would be an wise move, he's more than old enough.§b.§b;;;;;;;;;;;;x
@@ -31,11 +31,11 @@ brz_economics_check_tooltip_1;§! The country is fully dependant on slave work, E
 brz_economics_check_tooltip_2;§! The country is heavily dependant on slave work, Economical Consequences be §Rdreadful§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_3;§! The country is dependant on slave work, Economical Consequences be §Rextremely dire§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_4;§! The country is still dependant on slave work, Economical Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_5;§! The country still reallies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_6;§! The country still somewhat reallies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_5;§! The country still rellies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_6;§! The country still somewhat rellies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_7;§! Some sectos are still dependent on slave work, Economical Consequences be §Ysomewhat tolerable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_8;§! Most, but not all, sectors are free from slave work, Economical Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_9;§! The economy does not relly on slave work, Economical Consequences will be §Gresonable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_9;§! The economy does not relly on slave work, Economical Consequences will be §Greasonable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_10;§! The economy pretty much free from slave work, Economical Consequences will be §Bfew§!.§bb;;;;;;;;;;;;x
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
