--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -432,3 +432,4 @@ take_claimed_land_short;Forcefully take claimed lands;;;;;;;;;;;;;x
 new_world_hegemony_desc;Become the leading power in the New World.;;;;;;;;;;;;;x
 new_world_hegemony_setup;Become the leading power in the New World.;;;;;;;;;;;;;x
 new_world_hegemony_short;Become the leading power in the New World.;;;;;;;;;;;;;x
+new_world_hegemony;New World Hegemony;;;;;;;;;;;;;
