--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3556,7 +3556,7 @@ mar_das_gerais_desc;After the split, our country have been left without sea acce
 mar_das_gerais2_title;Finalize Espirito Santo buy;;;;;;;;;;;;;;x
 mar_das_gerais2_desc;We can now formalize the Espirito Santo buy, this will surely improve our economic outlook.;;;;;;;;;;;;;;x
 eusebio_de_queiroz_title;Eusébio de Queiroz Law;;;;;;;;;;;;;;x
-eusebio_de_queiroz_desc;Given the current situation, it's resonable to ban the atlantic slave trade, this will be one of many steps towards an mindful abolition. This will restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x
+eusebio_de_queiroz_desc;Given the current situation, it's reasonable to ban the atlantic slave trade, this will be one of many steps towards an mindful abolition. This will restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x
 ventre_livre_title;Ventre Livre Law;;;;;;;;;;;;;;x
 ventre_livre_desc;Freeing brazilian born slaves is the next natural step towards abolition. Assuming we properly restrict the entry of new slaves from Africa, this will effectively put a time limit for slavery in our country.;;;;;;;;;;;;;;x
 sexagenarios_title;Sexagenarios Law;;;;;;;;;;;;;;x
