--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -33,7 +33,7 @@ brz_economics_check_tooltip_3;§! The country is dependant on slave work, Economi
 brz_economics_check_tooltip_4;§! The country is still dependant on slave work, Economical Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_5;§! The country still rellies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_6;§! The country still somewhat rellies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
-brz_economics_check_tooltip_7;§! Some sectos are still dependent on slave work, Economical Consequences be §Ysomewhat tolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_7;§! Some sectors are still dependent on slave work, Economical Consequences be §Ysomewhat tolerable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_8;§! Most, but not all, sectors are free from slave work, Economical Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_9;§! The economy does not relly on slave work, Economical Consequences will be §Greasonable§!.§b;;;;;;;;;;;;x
 brz_economics_check_tooltip_10;§! The economy pretty much free from slave work, Economical Consequences will be §Bfew§!.§bb;;;;;;;;;;;;x
