--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -44,6 +44,8 @@ claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Cor
 acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
 break_line_tool_tip;§!\n;;;;;;;;;;;;x
 ban_slave_trade;§GBans§! Slave Trade.§b;;;;;;;;;;;;x
+end_game;§YEnd Game§! and §YSee Score§!.§b;;;;;;;;;;;;x
+continue_to_play;§GContinue! to play.§b;;;;;;;;;;;;x
 brz_politics_improve;§!This will §Gimprove§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_politics_worsen;§!This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
