New option to force the ACW

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -15,6 +15,10 @@ option_make_aiaustria_more_likely_to_join_desc;This is for players who want to s
 option_make_aiaustria_more_likely_to_join_title;Make Austria Certain to join Crimean War;;;;;;;;;;;;;x
 option_disable_commiemod_desc;The Commie Mod content is a bit volatile and buggy at the moment so it is disabled by default, if you desperately want to try it out you can enable it here. Bug reports about it are still welcome please just don't complain how it broke your game.;;;;;;;;;;;;;x
 option_disable_commiemod_title;Option: Enable Commie Mod;;;;;;;;;;;;;x
+option_bypass_acw_reqs_desc;This will bypass the American Civil War requirements and make sure it triggers most of the times.;;;;;;;;;;;;;x
+option_bypass_acw_reqs_title;Option: Bypass American Civil War requirements;;;;;;;;;;;;;x
+option_disable_bypass_acw_reqs_desc;Turns the ACW requirements back to normal.;;;;;;;;;;;;;x
+option_disable_bypass_acw_reqs_title;Option: Disable Bypass American Civil War requirements;;;;;;;;;;;;;x
 option_disable_easter_eggs_desc;Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
 option_disable_easter_eggs_title;Option: Disable Easter Eggs;;;;;;;;;;;;;x
 option_disable_extra_flavour_desc;TGC has intergrated some ahistorical and wacky submods allowing players to take their nation down implausible alternative paths. You may prefer to play without these. (The AI will never take major ahistorical options regardless of this decision);;;;;;;;;;;;;x
