Brazil can now be dismantled via the cheat menu

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -17,6 +17,8 @@ option_disable_commiemod_desc;The Commie Mod content is a bit volatile and buggy
 option_disable_commiemod_title;Option: Enable Commie Mod;;;;;;;;;;;;;x
 option_bypass_acw_reqs_desc;This will bypass the American Civil War requirements and make sure it triggers most of the times.;;;;;;;;;;;;;x
 option_bypass_acw_reqs_title;Option: Bypass American Civil War requirements;;;;;;;;;;;;;x
+option_break_brazil_desc;Dismantles Brazil into it's states. This can not be reversed.;;;;;;;;;;;;;x
+option_break_brazil_title;Dismantle Brazil;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_desc;Turns the ACW requirements back to normal.;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_title;Option: Disable Bypass American Civil War requirements;;;;;;;;;;;;;x
 option_disable_easter_eggs_desc;Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
