--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1615,3 +1615,7 @@ favelas;Favelas;;;;;;;;;;;;;;x
 favelas_desc;With the lack of proper housing, the poorest citizens, for a reason or another, end up in Favelas, crowded and poorly maintained housing on the outskirts of the city, usually on cliffsides and other places nobody else wants to build in.;;;;;;;;;;;;;;
 building_brasilia;Building Brasilia;;;;;;;;;;;;;;
 building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;;
+wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;;
+wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;;
+wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
+wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
