--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -834,7 +834,7 @@ EVTDESC6202;Farmers and locals at $PROVINCENAME$ have been complaining about how
 EVTOPTA6202;Deal with those greedy bankers at once!;;;;;;;;;;;;;x
 EVTOPTB6202;Let's study the situation carefully...;;;;;;;;;;;;;x
 EVTNAME6203;International Recognition.;;;;;;;;;;;;;x
-EVTDESC6203;$PROVINCENAME$’s University is pulling ahead on the global research race. Lately, one of their works sparked debate in several academic circles, a true gem of our country taking the spotlight of scientific advancement!;;;;;;;;;;;;;x
+EVTDESC6203;$PROVINCENAME$’s University is pulling ahead on the global research race. Lately, one of their works sparked debate in several academic circles, a true gem of our country taking the spotlight of scientific advancement!\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n;;;;;;;;;;;;;x
 EVTOPTA6203;Be modest!;;;;;;;;;;;;;x
 EVTOPTB6203;Let the word be know!;;;;;;;;;;;;;x
 EVTDESC6209;Income updater trigger;;;;;;;;;;;;;x
