--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -19,6 +19,8 @@ option_bypass_acw_reqs_desc;This will bypass the American Civil War requirements
 option_bypass_acw_reqs_title;Option: Bypass American Civil War requirements;;;;;;;;;;;;;x
 option_break_brazil_desc;Dismantles Brazil into it's states. This can not be reversed.;;;;;;;;;;;;;x
 option_break_brazil_title;Dismantle Brazil;;;;;;;;;;;;;x
+option_end_game_desc;Allows you to decide if you want to end the game and see the score.;;;;;;;;;;;;;x
+option_end_game_title;End Game;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_desc;Turns the ACW requirements back to normal.;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_title;Option: Disable Bypass American Civil War requirements;;;;;;;;;;;;;x
 option_disable_easter_eggs_desc;Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
