--- a/TGC/localisation/00_events_0000000.csv
+++ b/TGC/localisation/00_events_0000000.csv
@@ -1,7 +1,8 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 EVTDESC50;It seems that you are playing as Jan Mayen. That's not something you should be doing, not at all. This tag is meant to keep the mod working as intended and you're ruining the purpose of it entirely. If you want to play as an observer tag you can select San Marino.;;;;;;;;;;;;;x
 EVTNAME50;WARNING;;;;;;;;;;;;;x
-EVTOPTA50;Ok.;;;;;;;;;;;;;x
+EVTOPTA50;I know what I'm doing;;;;;;;;;;;;;x
+EVTOPTA50;Oh shit, take me out of here;;;;;;;;;;;;;x
 EVTDESC51;It updates yearly.;;;;;;;;;;;;;x
 EVTNAME51;Yearly Updater;;;;;;;;;;;;;x
 EVTOPTA51;Good.;;;;;;;;;;;;;x
