Starting elections one after the other now has a stability cost

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -404,6 +404,8 @@ eiffel_tower_construction_desc;Our great nation is dedicating its resources and 
 eiffel_tower_desc;The world awes at the sight of Monsieur Eiffel’s marvellous iron lattice tower!;;;;;;;;;;;;;x
 election_cooldown;Ongoing Elections;;;;;;;;;;;;;x
 election_cooldown_desc;Our voters are currently debating and discussing all important issues.;;;;;;;;;;;;;x
+election_national_cooldown;'I voted!';;;;;;;;;;;;;x
+election_national_cooldown;We had our elections properly, the citizens are resting nice and easy.;;;;;;;;;;;;;x
 emergency_tax_measures1;Emergency Measures;;;;;;;;;;;;;x
 emergency_tax_measures1_desc;Our financial situation has forced us to adopt draconian, and very unpopular, tax measures.;;;;;;;;;;;;;x
 emergency_tax_measures2;Extreme Measures;;;;;;;;;;;;;x
