--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1637,9 +1637,9 @@ EVTOPTA98304;We shall see.;;;;;;;;;;;;;x
 EVTDESC98305;The $COUNTRY_ADJ$ election is underway, and so far, it has proceeded smoothly. Debates are being carried out in the usual manner, and there are no reports of violence in $CAPITAL$ or elsewhere. Supporters of the ruling regime have turned out in force, as have the hopefuls seeking to defeat the current government.;;;;;;;;;;;;;x
 EVTNAME98305;Orderly Election;;;;;;;;;;;;;x
 EVTOPTA98305;We shall see.;;;;;;;;;;;;;x
-EVTDESC98306;The country is baffled was the Election is announced, did we just had one?;;;;;;;;;;;;;x
+EVTDESC98306;The country is baffled as the election is announced, did we just had one? People are starting to question our democratic process, one election after the other until the side the government wants to win wins?;;;;;;;;;;;;;x
 EVTNAME98306;An Election? Again?;;;;;;;;;;;;;x
-EVTOPTA98306;It's the democratic process!;;;;;;;;;;;;;x
+EVTOPTA98306;Democracy is NEVER enough!;;;;;;;;;;;;;x
 EVTDESC98310;The $COUNTRY_ADJ$ election has ended, with the leader of the conservative party declaring victory from the steps of the presidential palace in $CAPITAL$.;;;;;;;;;;;;;x
 EVTNAME98310;Conservatives Declare Victory!;;;;;;;;;;;;;x
 EVTOPTA98310;The $COUNTRY_ADJ$ people have spoken.;;;;;;;;;;;;;x
