--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -905,7 +905,7 @@ EVTNAME8021;The Imperial Family returns;;;;;;;;;;;;;
 EVTDESC8021;The Imperial Family has returned from their Exile. And with them, the mortal remains of Dom Pedro II, our last monarch, which is finally resting peacefuly in his beloved fatherland.;;;;;;;;;;;;;
 EVTOPTA8021;May he rest in peace now.;;;;;;;;;;;;;
 EVTNAME8050;We united the Kingdom, but now what?;;;;;;;;;;;;;
-EVTDESC8050;The idea of an united $COUNTRY$ is.... "dicey" at best. The Portuguese elites are not in favor of the idea of a Brazilian state with the same status as mainland Portugal, the Brazilians are resistant to the idea of being controlled by an european capital, and there's a lingering fear of Lisboa reducing their status back to a colony. \n\n Trying to appeal to both sides will be hard, but doable if we play our cards right, but there are other less orthodox options...;;;;;;;;;;;;;
+EVTDESC8050;The idea of an united $COUNTRY$ is.... "dicey" at best. The Portuguese elites are not in favor of the idea of a Brazilian state with the same status as mainland Portugal, the Brazilians are resistant to the idea of being controlled by an european capital, and there's a lingering fear of Lisboa reducing their status back to a colony. \n\n Trying to appeal to both sides will be hard, although doable if we play our cards right. \n\nBut there are other less orthodox options...;;;;;;;;;;;;;
 EVTOPTA8050;We must seek balance.;;;;;;;;;;;;;
 EVTOPTB8050;Move the capital to Rio de Janeiro, this land will be the new heart of the empire.;;;;;;;;;;;;;
 EVTOPTC8050;The brazilians must know their place in the pecking order.;;;;;;;;;;;;;
