New event-based setup system

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -22,3 +22,35 @@ EVTOPTB99;Europe;;;;;;;;;;;;;x
 EVTOPTC99;Asia;;;;;;;;;;;;;x
 EVTOPTD99;Africa;;;;;;;;;;;;;x
 EVTOPTE99;North & South America + Oceania;;;;;;;;;;;;;x
+EVTNAME59;TGC Setup Options;;;;;;;;;;;;;x
+EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.;;;;;;;;;;;;;x
+EVTOPTA59;Reset All Options.;;;;;;;;;;;;;x
+EVTOPTB59;Extra Random mode.;;;;;;;;;;;;;x
+EVTOPTC59;See All Options;;;;;;;;;;;;;x
+EVTOPTD59;I'm done with the setup.;;;;;;;;;;;;;x
+EVTNAME60;Setup Options, 1/4;;;;;;;;;;;;;x
+EVTDESC60;§BColonial Railroading§!: Within TGC there is plenty of flavor to help both the AI and the player follow a historical colonisation path in Africa and Asia. You may prefer to play without these leading to more unpredictable colonisation.\n§BEarly Crisis§!: In TGC, crisis only start after 1870, when Revolution and Counter-revolution is researched. Enabling Early Crisis will allow then to happen at any point. \n§BUK's Splendid Isolation§!: Historically the UK did not ally major european powers, and so in TGC the UK is forced to break alliances with any Great Powers who aren't Portugal, Belgium, Japan or the Ottomans. You may wish to turn this off. \n§BUSA African Colonization§!: USA has reduced influence in Africa, as historically the USA was not interested in Africa beyond Liberia. You may wish to remove this constraint. This will not affect an USA player.;;;;;;;;;;;;;x
+EVTOPTA60;Colonial Railroading (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTB60;Early Crisis (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTC60;UK's Splendid Isolation (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTD60;USA's African Colonization (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTNAME65;Setup Options, 2/4;;;;;;;;;;;;;x
+EVTDESC65;§BExtra Flavor§!: TGC has integrated some ahistorical and wacky submods allowing players (not the AI) to take their nation down implausible alternative paths. You may prefer to play without these.\n§BEaster Eggs§!: Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances, you may wish to disable those.\n§BEarly Colonial Conquest§!: This will enable you (and the AI) to justify protectorates/concessions on any province anywhere except China. By default, you can justify these CBs on bordering or port countries, while inland gets unlocked by Scramble.\n§BMinor Great Power Diplomancy Ban§!: Bans the 7th and 8th Great-Power from influencing nations through diplomacy (although not through the use of CB's and other ways of earning influence). For people that like a game with less nations meddling with global affairs.;;;;;;;;;;;;;x
+EVTOPTA65;Extra Flavor (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTB65;Easter Eggs (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTC65;Early Colonial Conquest (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTD65;Minor Great Power Diplomancy Ban (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTNAME70;Setup Options, 3/4;;;;;;;;;;;;;x
+EVTDESC70;§BWork Place Events§!: A few province events related to the workplace, such as 'The Old Man and the Sea', 'All the Tea in PROVINCENAME' and 'Blood and Iron Mine' can get quite spammy. You may prefer to disable those.\n§BLeader System§!: There is a National Leader system which will randomly assigned prime ministers/presidents to your country, you may wish to disable this.\n§BUnite as Puppet options§!: This allows a Great Power to unite some of their spherelings into a culture union puppet (Italy, Iberia, Scandinavia, Yugoslavia, Romania, Arabia, Transcaucasia, Turkestan and the United Baltic Duchy), some players consider these to be OP and prefer to play without them.\n§BMobilization Limiter for the AI§!: Sets some limits on when the AI can mobilize, so it doesn't ruin it's economy mobilizing in every single small war.;;;;;;;;;;;;;x
+EVTOPTA70;Work Place Events (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTB70;Leader System (Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTC70;Unite as Puppet options(Default: §GEnabled§!);;;;;;;;;;;;;x
+EVTOPTD70;Mobilization Limiter for the AI (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTNAME75;Setup Options, 4/4;;;;;;;;;;;;;x
+EVTDESC75;§BBypass American Civil War Requirements§!:This will bypass the American Civil War requirements and make sure it triggers most of the times.\n§BBreak Brazil§!: This will break Brazil apart and divide it into it's states, if you're playing as Brazil you will be able to pick a state to play after the breakage is over.\n§BAustria and the Crimea War§! This is for players who want to see an almost certain mini-ww1 in 1853. By default, the chance Austria intervenes is 15%. This will make Austria almost certain to join the Crimean War, Prussia will react to either side Austria chooses.\n§BMobilization Limiter for the AI§!: Sets some limits on when the AI can mobilize, so it doesn't ruin it's economy mobilizing in every single small war.;;;;;;;;;;;;;x
+EVTOPTA75;Bypass American Civil War Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTB75;Break Brazil;;;;;;;;;;;;;x
+EVTOPTC75;Make Austria Certain to join Crimean War(Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTOPTD75;Lucky Nations (Default: §RDisabled§!);;;;;;;;;;;;;x
+EVTBACK;Back to the Start.;;;;;;;;;;;;;x
+EVTNEXT;Next.;;;;;;;;;;;;;x
