--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -43,6 +43,7 @@ override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Cam
 claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma Suela§b;;;;;;;;;;;;x
 acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
 break_line_tool_tip;§!\n;;;;;;;;;;;;x
+break_line_tool_tip_multiple;§!\n\n\n\n\n\n;;;;;;;;;;;;x
 ban_slave_trade;§GBans§! Slave Trade.§b;;;;;;;;;;;;x
 end_game;§YEnd Game§! and §YSee Score§!.§b;;;;;;;;;;;;x
 continue_to_play;§GContinue§! to play.§b;;;;;;;;;;;;x
@@ -50,7 +51,7 @@ brz_politics_improve;§!This will §Gimprove§! the Political Landscape for Aboliti
 brz_politics_worsen;§!This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_worsen;§!This will §Rworsen§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
-brz_industry_alves;§bProblem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing with english goods.;;;;;;;;;;;;;x
+brz_industry_alves;§bProblem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing against English goods.;;;;;;;;;;;;;x
 brz_no_industry_alves;§bOur industry barely developed during the time, so I don't think that will be much of a problem.;;;;;;;;;;;;;x
 brz_alves_end;§!The §YAlves Branco Tariff§! modifier is set to end in §Y5 years§!.§b;;;;;;;;;;;;x
 slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
@@ -59,3 +60,7 @@ brz_guyanas_buy;You will pay §Y50000§! pounds per province, up to §Y450000§! pou
 kpb_formation;Forming the United Kingdom will lock you out from Brazilian and Portuguese exclusive content.§b;;;;;;;;;;;;x
 french_schooling_tool_tip;The §GJules Ferry Laws§! and the §GFrench Language Schooling§! decisions are mutually exclusive.§b;;;;;;;;;;;;x
 brazil_colony;Turns Brazil back into a §YColony§!.\n;;;;;;;;;;;;x
+currently_enabled;This is currently §GEnabled§!. Click to §RDisable§! it.;;;;;;;;;;;;x
+currently_disabled;This is currently §RDisabled§!. Click to §GEnable§! it.;;;;;;;;;;;;x
+permanent_option;§!This is permanent, you §RWON'T§! be able to change this optionb again in this save.;;;;;;;;;;;;x
+permanent_option_taken;§! You can't change this option anymore.;;;;;;;;;;;;x
