--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1090,6 +1090,11 @@ EVTDESC8221;The $FROMCOUNTRY_ADJ$ government is holding talks in the Brazilian c
 EVTNAME8221;The Treaty of Petrópolis;;;;;;;;;;;;;x
 EVTOPTA8221;Sounds like a good deal, we agree.;;;;;;;;;;;;;x
 EVTOPTB8221;No, Acre is a rightful part of $COUNTRY$.;;;;;;;;;;;;;x
+EVTDESC8222;The Bolivians have come forward to us with an offer. We have the option to acquire some territories in northern and eastern Bolivia. They believe these areas to be rather useless, however you never know what riches the Amazon could hide.;;;;;;;;;;;;;x
+EVTNAME8222;The Corumba Sale;;;;;;;;;;;;;x
+EVTOPTA8222;Let's do it.;;;;;;;;;;;;;x
+EVTOPTB8222;We'll have to politely decline this offer.;;;;;;;;;;;;;x
+EVTOPTC8222;How dare them offer us this useless strips of land!;;;;;;;;;;;;;x
 EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
 EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.§!;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
