--- a/TGC/localisation/00_events_1000000.csv
+++ b/TGC/localisation/00_events_1000000.csv
@@ -306,6 +306,9 @@ EVTDESC3697014;Our prominent position in Arabia brought us an unique opportunity
 EVTNAME3697014;The Rulers of Arabia;;;;;;;;;;;;;x
 EVTOPTA3697014;We should have good relations with our neighbors.;;;;;;;;;;;;;x
 EVTOPTB3697014;There's no need for this.;;;;;;;;;;;;;x
+EVTDESC3755286;The great war between the Americas is over, and $COUNTRY$ has suffered a great and humiliating defeat at the hands of the South Americans. All lands taken by the United States during the Mexican-American war are to be surrendered to back to Mexico, and several states are being organized into independent republics. It is unlikely the United States will ever recover from this defeat. One thing that is certain is the New World belongs to the South Americans.;;;;;;;;;;;;;x
+EVTNAME3755286;The Second Treaty of Guadalupe Hidalgo;;;;;;;;;;;;;
+EVTOPTA3755286;How could we let this happen?;;;;;;;;;;;;;
 EVTDESC3886062;Brazil’s transition into a republic has not been as stable as some have hoped. There are frequent clashes in the streets between conservatives and liberals which end in large amount of bloodshed by both sides. Something must be done, and those on the right are demanding the military step in to secure order and centralize the state. This might grant some stability, but it would be a betrayal to the ideas of democracy.;;;;;;;;;;;;;x
 EVTNAME3886062;The State of the New Republic;;;;;;;;;;;;;x
 EVTOPTA3886062;The Republic will Endure;;;;;;;;;;;;;x
@@ -622,7 +625,9 @@ EVTNAME8016634;The Caribbean Federation;;;;;;;;;;;;;x
 EVTOPTA8016634;Jamaica will do nicely;;;;;;;;;;;;;x
 EVTOPTB8016634;Havana, the oldest and the grandest;;;;;;;;;;;;;x
 EVTOPTC8016634;To the revolution in Haiti!;;;;;;;;;;;;;x
-EVTDESC8075754;South America exploded in power so quickly and with such great force that it is not surprising that the Union should collapse just as swiftly. Many in South America were sure that they could overthrow the United States hegemony over New World, but the Eagles wings are not clipped so easily. Now that victory belongs to the United States, the continent of South America will be returned to its state of scattered, disunited, and bickering countries all under the sphere their Yankee overlords. The greatest experiment in South America is now over, and the ghost of revolutionaries’ weep.;;;;;;;;;;;;;x
+EVTDESC807575;South America exploded in power so quickly and with such great force that it is not surprising that the Union should collapse just as swiftly. Many in South America were sure that they could overthrow the United States hegemony over New World, but the Eagles wings are not clipped so easily. Now that victory belongs to the United States, the continent of South America will be returned to its state of scattered, disunited, and bickering countries all under the sphere their Yankee overlords. The greatest experiment in South America is now over, and the ghost of revolutionaries weep.;;;;;;;;;;;;;x
+EVTNAME807575;The Treaty of Miami;;;;;;;;;;;;;
+EVTOPTA807575;The dream has died.;;;;;;;;;;;;;
 EVTDESC8133696;The foreign imperialists are gone, but what about the empires that remain? Are they saboteurs disguised as heads of states? Can democracy ever truly be guaranteed if an unelected man holds the highest office? Questions like these are abound in Washington as the issue what should be done about the Brazilian Empire. Can a royal family exist in this New World of liberty the United States is attempting to build?;;;;;;;;;;;;;x
 EVTNAME8133696;The Monarchy of Brazil;;;;;;;;;;;;;x
 EVTOPTA8133696;Democracy is non-negotiable!;;;;;;;;;;;;;x
@@ -752,9 +757,12 @@ EVTDESC9000009;It has become clear that the Dutch want to represented by a Dutch
 EVTNAME9000009;A Dutch Person for Dutch Subjects;;;;;;;;;;;;;x
 EVTOPTA9000009;A Dutch Governour;;;;;;;;;;;;;x
 EVTOPTB9000009;A Dutch King;;;;;;;;;;;;;x
-EVTDESC9000010;We have lost our war to gain the Lowlands for Germany, as the loosers we must accept the treaty that was imposed on us. This will be end of Germany, as the winners seek to restablish the German region as a bunch of republics,kingdoms, and everything in between.;;;;;;;;;;;;;x
+EVTDESC9000010;We have lost our war to gain the Lowlands for Germany, as the losers we must accept the treaty that was imposed on us. This will be end of Germany, as the winners seek to restablish the German region as a bunch of republics,kingdoms, and everything in between.;;;;;;;;;;;;;x
 EVTNAME9000010;Treaty of German Containment;;;;;;;;;;;;;x
 EVTOPTA9000010;This is the end;;;;;;;;;;;;;x
+EVTDESC9000011;We have lost. Our Fatherland is in rubble. As the losers we must accept the treaty that was imposed on us. This will be end of Germany, as the winners seek to restablish the German region with a plethora of small countries that are easy to control.;;;;;;;;;;;;;x
+EVTNAME9000011;Treaty of German Containment;;;;;;;;;;;;;x
+EVTOPTA9000011;This is the End;;;;;;;;;;;;;x
 EVTNAME9111111;The Dutch Question;;;;;;;;;;;;;x
 EVTDESC9111111;The meeting we called over the status of our Dutch neighbors has nearly come to and end, though there is a split between our top officals on how excatly the solution should look like. The militarist are calling for the full invasion of the Lowlands and integrating the Netherlands and Flanders with the French port of Dunkerque. The militarist have already laid out their plan for the invasion, though it is expected that the invasion will attract the attention the Russians and British. The moderates see the value of the lowlands vastly overstated and to much of a strain on the nation to maintain control over them. §RNOTE: The peacedeal will be offered to you by an event should you manage to peace out French, the Dutch, and Belgium (should they exist).§W;;;;;;;;;;;;;x
 EVTOPTA9111111;The Militarist are correct prepare for war!;;;;;;;;;;;;;x
