--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -134,6 +134,10 @@ USS_annex_PRI_title;Integrate Puerto Rico;;;;;;;;;;;;;x
 USS_caliport_desc;In order to secure South American security interest in North America, we should approach Mexico to purchase the Port of San Francisco. A naval base there will help us keep an eye on the Pacific.;;;;;;;;;;;;;x
 USS_caliport_title;The Port of San Francisco;;;;;;;;;;;;;x
 USS_colonies_desc;With South America unified under one flag, we are strong enough to secure the uncolonized land on our southern border.;;;;;;;;;;;;;x
+USS_USA_lose_desc;The South American invaders have been repealed, and parades march down every boulevard in celebration in our defence of freedom. For too long the United States has allowed South America aggressive expansion to continue uncontrolled for too long, but after this war it has become clear a united South America must come to an end. Delegates are meeting in Miami to determine what is to be done to restore order to the New World.;;;;;;;;;;;;;x
+USS_USA_lose_title;The Treaty of Miami;;;;;;;;;;;;;x
+USS_USA_win_desc;After a terrible struggle, victory belongs to South America and our hegemony over the New World is unquestionable. The people of Latin America will no longer be oppressed by the United States. Land stolen during the American Intervention in Mexico will be returned, and the United States will be dismantled into smaller and easier to manage federations. The future of the Americas shines bright under the Sun of May.;;;;;;;;;;;;;x
+USS_USA_win_title;The Second Treaty of Guadalupe Hidalgo;;;;;;;;;;;;;x
 USS_colonies_title;Secure Uncolonized Lands;;;;;;;;;;;;;x
 USS_dismantle_USA_desc;If the people of Latin America are to be truly free, then the we must end the United States of America’s domination of the New World. While it claims to be the protector of democracy against foreign threats, the United States is nothing more than another imperial tyrant. All of Latin America must rally behind $COUNTRY$ in this final war for liberty! Although should we be defeated, the consequences will be grave.;;;;;;;;;;;;;x
 USS_dismantle_USA_title;The Final War for Liberation;;;;;;;;;;;;;x
