--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -49,8 +49,8 @@ option_enable_lucky_nations_desc;Sometimes in this world, nations seem to be ble
 option_enable_lucky_nations_title;Option: Enable Lucky Nations;;;;;;;;;;;;;x
 option_enable_money_hoarder_desc;Money hoarder modifiers will trigger when a country has too much money in its stockpile and reduce its tax efficiency, forcing money back into the economy.;;;;;;;;;;;;;x
 option_enable_money_hoarder_title;Option: Enable Money Hoarder Modifiers;;;;;;;;;;;;;x
-option_enable_options_desc;This decision shows all optional decisions to tweak and change the game’s behaviour from vanilla TGC. This, along with all decisions it enables, will disappear January 1st 1837 to reduce clutter, so you have a year in-game to pick and choose what you want. Once a tweak is chosen, you can’t disable it anymore, so if you mis-click you need to edit your save or start a new game.;;;;;;;;;;;;;x
-option_enable_options_title;Show ‘Options’ Decisions;;;;;;;;;;;;;x
+option_enable_options_desc;Open the Setup Menu, so you can configure the game as you wish. You will only be able to do so in the first year.;;;;;;;;;;;;;x
+option_enable_options_title;Open TGC's Setup;;;;;;;;;;;;;x
 option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. Beware: Money is deducted on monthly basis from your treasury. Pay attention to it lest you go bankrupt.;;;;;;;;;;;;;x
 option_enable_overrides_title;Option: Enable Override Decisions;;;;;;;;;;;;;x
 option_enable_spectator_mode_desc;Disable ‘Winds of Westernization’ events for spectator games as an uncivilized nation.;;;;;;;;;;;;;x
