--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -19,8 +19,6 @@ option_bypass_acw_reqs_desc;This will bypass the American Civil War requirements
 option_bypass_acw_reqs_title;Option: Bypass American Civil War requirements;;;;;;;;;;;;;x
 option_break_brazil_desc;Dismantles Brazil into it's states. This can not be reversed.;;;;;;;;;;;;;x
 option_break_brazil_title;Dismantle Brazil;;;;;;;;;;;;;x
-option_end_game_desc;Allows you to decide if you want to end the game and see the score.;;;;;;;;;;;;;x
-option_end_game_title;End Game;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_desc;Turns the ACW requirements back to normal.;;;;;;;;;;;;;x
 option_disable_bypass_acw_reqs_title;Option: Disable Bypass American Civil War requirements;;;;;;;;;;;;;x
 option_disable_easter_eggs_desc;Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
@@ -51,8 +49,8 @@ option_enable_lucky_nations_desc;Sometimes in this world, nations seem to be ble
 option_enable_lucky_nations_title;Option: Enable Lucky Nations;;;;;;;;;;;;;x
 option_enable_money_hoarder_desc;Money hoarder modifiers will trigger when a country has too much money in its stockpile and reduce its tax efficiency, forcing money back into the economy.;;;;;;;;;;;;;x
 option_enable_money_hoarder_title;Option: Enable Money Hoarder Modifiers;;;;;;;;;;;;;x
-option_enable_options_desc;This decision shows all optional decisions to tweak and change the game’s behaviour from vanilla TGC. This, along with all decisions it enables, will disappear January 1st 1837 to reduce clutter, so you have a year in-game to pick and choose what you want. Once a tweak is chosen, you can’t disable it anymore, so if you mis-click you need to edit your save or start a new game.;;;;;;;;;;;;;x
-option_enable_options_title;Show ‘Options’ Decisions;;;;;;;;;;;;;x
+option_enable_options_desc;Open the Setup Menu, allowing you to cusstomize and configure the game as you wish. You will only be able to do so in the first year.;;;;;;;;;;;;;x
+option_enable_options_title;Open TGC's Setup;;;;;;;;;;;;;x
 option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. Beware: Money is deducted on monthly basis from your treasury. Pay attention to it lest you go bankrupt.;;;;;;;;;;;;;x
 option_enable_overrides_title;Option: Enable Override Decisions;;;;;;;;;;;;;x
 option_enable_spectator_mode_desc;Disable ‘Winds of Westernization’ events for spectator games as an uncivilized nation.;;;;;;;;;;;;;x
